--- a/src/styles/components/_categorical-list.scss
+++ b/src/styles/components/_categorical-list.scss
@@ -26,7 +26,6 @@
     height: 100%;
     justify-content: center;
     overflow: hidden;
-    margin-right: spacing(large);
     width: calc((var(--categorical-available-height) / var(--num-categorical-rows)) * ((var(--num-categorical-items) + (var(--num-categorical-rows) - 1)) / var(--num-categorical-rows)));
 
     &--expanded {
